deploy/k8s/011-express-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-cluster-ip-service
  namespace: mockrift-com
spec:
  type: ClusterIP
  selector:
    app: express
  ports:
    - name: express
      port: 3000
      targetPort: 3000
